# Minecraft_Mod_Vault_Manager

./: .gitignore  Formated.json  HAOLE.json  README.md  Untitled-1.json  message.TXT  pyproject.toml
Plugins/: Interface_BASIC.py  Interface_Basic.py  Interface_CURSEFORGE.py  Interface_Example.py  Interface_MCMOD.py  Interface_MODRINTH.py
Plugins/Interface/: Interface_CURSEFORGE.py  Interface_MCMOD.py  Interface_MODRINTH.py
src/mmvm/: NetworkDetection.py  Scraper.py  main.py  start.py
src/mmvm/Class/: DownloaderProcess.py  DownloaderThreadPool.py  HTMLProcessor.py  ModuleInterface.py  PluginLoader.py  PluginManager.py
src/mmvm/Function/: DependsParse .py  LoacteBookMarks.py  NetworkDetection.py
src/mmvm/Public/: Instances.py  Interface_CURSEFORGE.py  Interface_MCMOD.py  Interface_MODRINTH.py  LogManager.py
tests/: CreateTests.py  Test_01.html  Test_01.py  Test_02.py  Test_03.py  Test_04.py
