[project]
authors = [
  {name = "NuhilLucas", email = "xframilrainx@163.com"},
]
dependencies = []
description = ""
name = "Minecraft-Mod-Vault-Manager"
readme = "README.md"
requires-python = "==3.13"
version = "0.1.0"

[tool.poetry]
packages = [{include = "mmvm", from = "src"}]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
