[project]
authors = [
  {name = "NuhilLucas", email = "xframilrainx@163.com"},
]
dependencies = ["pylucas[fileops,log] (>=3.0.2,<4.0.0)"]
description = ""
name = "Minecraft-Mod-Vault-Manager"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.poetry]
packages = [{include = "mmvm", from = "src"}]

[tool.poetry.group.web.dependencies]
aiohttp = "^3.12.14"
lxml = "^6.0.0"
requests = "^2.32.4"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
